k8s/base/service-adminer.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
  labels:
    app: adminer
spec:
  selector:
    app: adminer
  ports:
    - port: 80
      targetPort: 8080
