k8s/base/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
